--- a/css/base.css
+++ b/css/base.css
@@ -1,33 +1,38 @@
-article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}body{margin:0;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;margin:0.67em 0;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:bold;}dfn{font-style:italic;}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace,serif;font-size:1em;}pre{white-space:pre-wrap;}q{quotes:"\201C" "\201D" "\2018" "\2019";}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-0.5em;}sub{bottom:-0.25em;}img{border:0;}svg:not(:root){overflow:hidden;}figure{margin:0;}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em;}legend{border:0;padding:0;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,select{text-transform:none;}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;}button[disabled],html input[disabled]{cursor:default;}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}
 *,
 *::after,
 *::before {
 	box-sizing: border-box;
 }
 
-html {
-	background: #000;
+:root {
+	font-size: 14px;
 }
 
 body {
-	min-height: 100vh;
-	color: grey;
-	background: #fff;
-	background: var(--color-bg);
+	margin: 0;
+	--color-text: #1E1E1E;
+	--color-bg: #f1f1f1;
+	--color-link: #de6565;
+	--color-link-hover: #1E1E1E;
+	--color-menu-stroke: #1E1E1E;
+	--color-menu-item: #1E1E1E;
+	--color-explore: #1E1E1E;
+	color: var(--color-text);
+	background-color: var(--color-bg);
+	font-family: niveau-grotesk, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow: scroll;
+	overflow-x: hidden;
 }
 
-
-
-/* Fade effect */
-.js body {
-	opacity: 0;
-	transition: opacity 0.3s;
+.cursor {
+	display: none;
 }
 
-.js body.render {
-	opacity: 1;
+main {
+	width: 100%;
+	overflow: hidden;
 }
 
 /* Page Loader */
@@ -54,7 +59,7 @@ body {
 	pointer-events: none;
 	border-radius: 50%;
 	opacity: 0.4;
-	background: var(--color-text);
+	background: var(--color-link);
 	animation: loaderAnim 0.7s linear infinite alternate forwards;
 }
 
@@ -77,203 +82,406 @@ a:focus {
 	outline: none;
 }
 
-button:focus {
-	outline: none;
-}
-
-.hidden {
+.frame {
+	padding: 2rem 1rem;
+	text-align: center;
 	position: absolute;
-	overflow: hidden;
-	width: 0;
-	height: 0;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 1000;
 	pointer-events: none;
 }
 
-.content {
-	flex-direction: column;
-	height: auto;
-	min-height: 0;
+.frame__title {
+	font-size: 1rem;
+	margin: 0 0 1rem;
 }
 
-.content--fixed {
-	position: relative;
-	z-index: 1000;
-	display: block;
-	padding: 0.85em;
+.frame__links {
+	display: inline;
 }
 
-.codrops-header {
-	flex-direction: column;
-	align-items: center;
+.frame a {
+	pointer-events: auto;
+	text-transform: lowercase;
 }
 
-.codrops-header__title {
-	font-weight: bold;
-	padding-bottom: 0.25em;
-	text-align: center;
+.frame__links a:not(:last-child) {
+	margin-right: 1rem;
 }
 
-.info {
-	margin: 0;
-}
-
-.codrops-links {
-	margin: 0;
-}
-
-.message {
-	position: relative;
-	z-index: 100;
-	padding: 1em;
-	text-align: center;
-	color: var(--color-bg);
-	background: var(--color-text);
-}
-
-/* Icons */
-.icon {
-	display: block;
-	width: 1.5em;
-	height: 1.5em;
-	margin: 0 auto;
-	fill: currentColor;
-}
-
-main {
-	position: relative;
-	width: 100%;
-}
-
-/* Header */
-.codrops-header {
-	position: relative;
-	z-index: 100;
-	display: flex;
-}
-
-.codrops-header__title {
-	font-size: 1em;
-	font-weight: bold;
-	margin: 0;
-	padding: 0.75em 0;
-}
-
-.info {
-	color: var(--color-info);
-	text-align: center;
-}
-
-/* Top Navigation Style */
-.codrops-links {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	white-space: nowrap;
-}
-
-.codrops-icon {
-	display: inline-block;
-	margin: 0.15em;
-	padding: 0.25em;
-}
-
-.demos {
-	text-align: center;
-	line-height: 2;
+.frame__social {
 	margin: 1rem 0 0 0;
 }
 
-.github {
-	display: block;
+.frame__social-behance {
+	width: 20px;
+	display: inline-block;
 }
 
-.content {
-	position: relative;
+.frame__pagetitle {
+	font-weight: bold;
+	margin: 0 0 1rem;
+}
+
+.menu-wrap {
+	position: absolute;
+	top: 0;
+	left :0;
+	height: 100%;
+	width: 100%;
+	pointer-events: none;
+}
+
+.page--preview ~ .menu-wrap {
+	pointer-events: auto;
+}
+
+.menu-draggable {
+	top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+	cursor: grab;
+}
+
+.menu-draggable:active {
+	cursor: grabbing;
+}
+
+.menu {
 	display: flex;
-	justify-content: center;
+	width: 100vw;
+	height: 100vh;
+	position: relative;
+	justify-content:flex-start;
 	align-items: center;
+	width: -moz-fit-content;
+	width: fit-content;
+	counter-reset: menu-number;
+	pointer-events: none;
+	will-change: transform;
 }
 
-.content--switch {
-	padding: 2.5rem 1rem;
+.menu__item {
+	position: relative;
+	text-align: center;
+	margin: 0 10vw 0 0;
+	--counter-opacity: 0;
+	color: var(--color-menu-item);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-.demo--current {
-	opacity: 0.5;
+.page--preview ~ .menu-wrap .menu__item {
+	--counter-opacity: 1;
 }
 
-@media screen and (min-width: 55em) {
-	.message {
-		display: none;
-	}
+.menu__item::before {
+	counter-increment: menu-number;
+	content: counter(menu-number, decimal-leading-zero);
+	position: absolute;
+	top: 0;
+	right: 100%;
+	opacity: var(--counter-opacity);
+	transition: opacity 0.3s;
+}
 
-	.codrops-header {
-		flex-direction: row;
-		align-items: flex-start;
-		align-items: center;
-		align-self: start;
-		grid-area: header;
-		justify-self: start;
-	}
+.menu__item--current {
+	color: var(--color-menu-item);
+}
 
-	.codrops-links {
-		margin-right: 1rem;
-	}
+.menu__item-link {
+	color: currentColor;
+	font-weight: bold;
+	font-size: 12vw;
+	display: flex;
+	line-height: 1.2;
+}
 
-	.info {
-		text-align: left;
-		margin: 0 0 0 1.25em;
-	}
+.menu__item-explore {
+	cursor: pointer;
+	margin: 0.5rem 0 0 0;
+	display: inline-block;
+	color: var(--color-explore);
+	text-decoration: underline;
+	opacity: 0;
+	padding: 0.5rem 0.5rem 0;
+	will-change: transform;
+}
 
-	.content {
-		margin: 0 auto;
-		min-height: 100vh;
-	}
+.menu__item-explore:hover,
+.menu__item-explore:focus {
+	text-decoration: none;
+}
 
-	.js .content--switch {
-		display: none;
-	}
+.page--preview ~ .menu-wrap .menu__item--current .menu__item-explore {
+	pointer-events: auto;
+}
 
-	.js .content--switch-current {
-		display: flex;
-	}
+.letter {
+	position: relative;
+	overflow: hidden;
+	display: inline-block;
+}
 
-	.content--fixed {
+.letter__inner {
+	display: block;
+	will-change: transform;
+}
+
+.letter__inner--stroke {
+	position: absolute;
+	left: 100%;
+	top: 0;
+	-webkit-text-stroke: 1px var(--color-menu-stroke);
+	text-stroke: 1px var(--color-menu-stroke);
+	-webkit-text-fill-color: transparent;
+	text-fill-color: transparent;
+	color: transparent;
+}
+
+.menu__item--current .letter__inner {
+	transform: translate3d(-100%,0,0);
+}
+
+.grid-wrap {
+	display: grid;
+	margin: 0 auto;
+	grid-template-columns: 100%;
+	grid-template-rows: 3rem 1fr;
+	position: relative;
+	padding: 13rem 5vw 2rem;
+	pointer-events: none;
+}
+
+.gridback {
+	align-self: start;
+	grid-area: 1 / 1 / 2 / 2;
+	justify-self: center;
+	background: none;
+	border: 0;
+	margin: 0;
+	padding: 0;
+	color: #fff;
+	opacity: 0;
+	pointer-events: auto;
+}
+
+.page--preview .gridback {
+	pointer-events: none;
+}
+
+.gridback:hover {
+	color: var(--color-link-hover);
+}
+
+.gridback:focus {
+	outline: none;
+}
+
+.grid {
+	grid-area: 2 / 1 / 3 / 2;
+	--gridgap: 1vw;
+	--gridwidth: 100%;
+	--gridheight: 80vw;
+	display: grid;
+	width: var(--gridwidth);
+	height: var(--gridheight);
+	grid-template-rows: repeat(10,calc(var(--gridheight) / 10 - var(--gridgap)));
+	grid-template-columns: repeat(10,calc(var(--gridwidth) / 10 - var(--gridgap)));
+	grid-gap: var(--gridgap);
+	align-content: center;
+    justify-content: center;
+}
+
+.grid__item-wrap {
+	position: relative;
+	will-change: transform;
+}
+
+.grid__item::after {
+	content: '';
+	background: rgba(241,241,241,1);
+	opacity: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	transition: opacity 0.8s cubic-bezier(0.19,1,0.22,1);
+	will-change: opacity;
+}
+
+.page--preview .grid__item::after {
+	opacity: 0.4;
+}
+
+.grid__item {
+	opacity: 0;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	background-size: cover;
+	will-change: transform;
+}
+
+
+/* Layout 1 */
+.grid--layout-1 .grid__item-wrap:first-child {grid-area: 3 / 1 / 8 / 4;}
+.grid--layout-1 .grid__item-wrap:nth-child(2) {grid-area: 1 / 2 / 3 / 4;}
+.grid--layout-1 .grid__item-wrap:nth-child(3) {grid-area: 5 / 4 / 8 / 8; }
+.grid--layout-1 .grid__item-wrap:nth-child(4) {grid-area: 2 / 7 / 5 / 11;}
+.grid--layout-1 .grid__item-wrap:nth-child(5) {grid-area: 1 / 4 / 5 / 7;}
+.grid--layout-1 .grid__item-wrap:nth-child(6) {grid-area: 8 / 5 / 11 / 2;}
+.grid--layout-1 .grid__item-wrap:nth-child(7) {grid-area: 10 / 9 / 8 / 11;}
+.grid--layout-1 .grid__item-wrap:nth-child(8) {grid-area: 5 / 8 / 8 / 10;}
+.grid--layout-1 .grid__item-wrap:nth-child(9) {grid-area: 8 / 5 / 11 / 9;}
+
+
+/* Layout 2 */
+.grid--layout-2 .grid__item-wrap:first-child { grid-area: 2 / 1 / 5 / 4; }
+.grid--layout-2 .grid__item-wrap:nth-child(2) { grid-area: 1 / 4 / 4 / 7; }
+.grid--layout-2 .grid__item-wrap:nth-child(3) {grid-area: 1 / 7 / 5 / 10;}
+.grid--layout-2 .grid__item-wrap:nth-child(4) {grid-area: 5 / 1 / 7 / 4;}
+.grid--layout-2 .grid__item-wrap:nth-child(5) {grid-area: 4 / 4 / 7 / 7;}
+.grid--layout-2 .grid__item-wrap:nth-child(6) {grid-area: 7 / 7 / 11 / 4;}
+.grid--layout-2 .grid__item-wrap:nth-child(7) {grid-area: 5 / 7 / 8 / 11;}
+.grid--layout-2 .grid__item-wrap:nth-child(8) {grid-area: 7 / 2 / 9 / 4;}
+
+/* Layout 3 */
+.grid--layout-3 .grid__item-wrap:first-child {grid-area: 1 / 2 / 3 / 5;}
+.grid--layout-3 .grid__item-wrap:nth-child(2) {grid-area: 3 / 1 / 6 / 5;}
+.grid--layout-3 .grid__item-wrap:nth-child(3) {grid-area: 1 / 5 / 5 / 8;}
+.grid--layout-3 .grid__item-wrap:nth-child(4) {grid-area: 2 / 8 / 6 / 11;}
+.grid--layout-3 .grid__item-wrap:nth-child(5) {grid-area: 5 / 5 / 8 / 8;}
+.grid--layout-3 .grid__item-wrap:nth-child(6) {grid-area: 6 / 8 / 8 / 11;}
+.grid--layout-3 .grid__item-wrap:nth-child(7) {grid-area: 6 / 2 / 8 / 5;}
+.grid--layout-3 .grid__item-wrap:nth-child(8) {grid-area: 11 / 4 / 8 / 7;}
+.grid--layout-3 .grid__item-wrap:nth-child(9) {grid-area: 8 / 9 / 11 / 7;}
+
+/* Layout 4 */
+.grid--layout-4 .grid__item-wrap:first-child {grid-area: 2 / 1 / 4 / 4;}
+.grid--layout-4 .grid__item-wrap:nth-child(2) {grid-area: 1 / 4 / 3 / 7;}
+.grid--layout-4 .grid__item-wrap:nth-child(3) {grid-area: 3 / 4 / 5 / 7;}
+.grid--layout-4 .grid__item-wrap:nth-child(4) {grid-area: 1 / 7 / 4 / 11;}
+.grid--layout-4 .grid__item-wrap:nth-child(5) {grid-area: 4 / 2 / 7 / 4;}
+.grid--layout-4 .grid__item-wrap:nth-child(6) {grid-area: 5 / 7 / 8 / 4;}
+.grid--layout-4 .grid__item-wrap:nth-child(7) {grid-area: 4 / 7 / 8 / 11;}
+.grid--layout-4 .grid__item-wrap:nth-child(8) {grid-area: 8 / 9 / 11 / 4;}
+
+/* Layout 5 */
+.grid--layout-5 .grid__item-wrap:first-child {grid-area: 2 / 1 / 5 / 4;}
+.grid--layout-5 .grid__item-wrap:nth-child(2) {grid-area: 1 / 4 / 5 / 7;}
+.grid--layout-5 .grid__item-wrap:nth-child(3) {grid-area: 5 / 2 / 7 / 5;}
+.grid--layout-5 .grid__item-wrap:nth-child(4) {grid-area: 1 / 7 / 4 / 11;}
+.grid--layout-5 .grid__item-wrap:nth-child(5) {grid-area: 5 / 7 / 7 / 5;}
+.grid--layout-5 .grid__item-wrap:nth-child(6) {grid-area: 7 / 5 / 10 / 1;}
+.grid--layout-5 .grid__item-wrap:nth-child(7) {grid-area: 4 / 7 / 7 / 9;}
+.grid--layout-5 .grid__item-wrap:nth-child(8) {grid-area: 4 / 9 / 9 / 11;}
+.grid--layout-5 .grid__item-wrap:nth-child(9) {grid-area: 7 / 5 / 11 / 9;}
+
+.page--preview {
+	position: relative;
+	overflow: hidden;
+	height: 100vh;
+	pointer-events: none;
+}
+
+@media screen and (min-width: 53em) {
+	.frame {
 		position: fixed;
-		z-index: 10;
+		text-align: left;
+		z-index: 10000;
 		top: 0;
 		left: 0;
 		display: grid;
 		align-content: space-between;
 		width: 100%;
 		max-width: none;
-		min-height: 0;
 		height: 100vh;
-		padding: 1.5em;
-		pointer-events: none;
-		grid-template-columns: 70% 30%;
-		grid-template-rows: auto auto 4em;
-		grid-template-areas: 'header ...'
-		'... ...'
-		'menu demos';
+		padding: 2.5rem 3rem;
+		grid-template-columns: 20rem 1fr 1fr;
+		grid-template-rows: auto auto auto;
+		grid-template-areas: 'title links pagetitle'
+							'... ... ...'
+							'... ... social';
 	}
-
-	.content--fixed a {
-		pointer-events: auto;
-	}
-
-	.demos {
-		grid-area: demos;
-		align-self: end;
-		justify-self: end;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+	.frame__pagetitle {
+		grid-area: pagetitle;
 		margin: 0;
 	}
+	.frame__title-wrap {
+		grid-area: title;
+		display: flex;
+	}
+	.frame__title {
+		margin: 0;
+	}
+	.frame__tagline {
+		position: relative;
+		margin: 0 0 0 1rem;
+		padding: 0 0 0 1rem;
+	}
+	.frame__social {
+		margin: 0;
+		grid-area: social;
+		justify-self: end;
+	}
+	.frame__links {
+		grid-area: links;
+		padding: 0;
+		justify-self: start;
+	}
+	.grid-wrap {
+		grid-template-rows: 1.25rem 1fr;
+		grid-gap: 3rem;
+		padding: 2.5rem 3rem;
+	}
+	.grid {
+		padding: 0 10vw;
+	}
+	.gridback {
+		justify-self: end;
+	}
+}
 
-	.demo:nth-child(2) {
-		margin: 0 3rem 0 1.5rem;
+@media (any-pointer: fine) {
+	.cursor {
+		display: block;
+	}
+	.cursor__inner {
+		z-index: 9999;
+		pointer-events: none;
+		position: absolute;
+		top: 0;
+		left: 0;
+		mix-blend-mode: difference;
+		border-radius: 50%;
+	}
+	.cursor__side {
+		position: absolute;
+		top: 50%;
+		width: 5px;
+		height: 1px;
+		background: #de6565;
+		opacity: 0;
+	}
+	.cursor__side--left {
+		right: calc(100% + 5px);
+	}
+	.cursor__side--right {
+		left: calc(100% + 5px);
+	}
+	.cursor__inner--circle {
+		width: 25px;
+		height: 25px;
+		border: 1px solid #de6565;
 	}
 }
